2008-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp46/sp46.scn: Add screen missed earlier.

2008-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1348/cpukit
	* Makefile.am, configure.ac: Add test of special case of resetting cpu
	usage information while a period is running.
	* sp46/.cvsignore, sp46/Makefile.am, sp46/init.c, sp46/sp46.doc,
	sp46/sp46.scn: New files.

2008-12-03	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp45/init.c: New file.

2008-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1347/cpukit
	* Makefile.am, configure.ac, sp30/resume.c, sp30/task1.c, sp31/delay.c:
	Rework Timer Server to ensure that the context allows for blocking,
	allocating memory, and acquiring semaphores and mutexes.
	* sp45/.cvsignore, sp45/Makefile.am, sp45/sp45.doc, sp45/sp45.scn:
	New files.

2008-11-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp25/system.h: Add warning and temporary m32c conditional until size
	type addressed.

2008-10-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp09/screen07.c: Use INT_MAX as number of messages so always
	properly sized and no overflow on constant.
	* sp09/screen10.c: Delay so on targets with simulator idle clock
	tick driver this will work.
	* sp09/screen11.c, sp09/system.h: Move badly aligned objects to odd
	byte boundaries rather than two byte boundaries.
	* sp09/screen03.c, sp09/screen14.c: Skip tests which try to
	allocate more memory than size_t holds on m32c.

2008-10-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp09/screen01.c, sp09/screen12.c, sp25/system.h, sp25/task1.c,
	sp28/init.c, sp39/init.c, sp41/init.c, spfatal01/testcase.h,
	spfatal08/testcase.h: Change size_t to ssize_t on all Heap, Workspace
	and Region calls. On 16-bit architectures, size_t can be 16-bits
	which would limit sizes to 64K. Also address constants which
	overflowed on 16-bit integer targets.

2008-10-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp43/sp43.scn: Bump version to 4.9.99.0
