@@ -3,7 +3,7 @@
  *  This include file contains information that is included in every
  *  function in the test set.
  *
- *  COPYRIGHT (c) 1989-1999.
+ *  COPYRIGHT (c) 1989-2008.
  *  On-Line Applications Research Corporation (OAR).
  *
  *  The license and distribution terms for this file may be
@@ -52,7 +52,7 @@ TEST_EXTERN uint8_t   Area_1[32000]  CPU_STRUCTURE_ALIGNMENT;
 TEST_EXTERN uint8_t   Area_1[64000]  CPU_STRUCTURE_ALIGNMENT;
 #endif
 
-#define BASE_PRIORITY 140
+#define BASE_PRIORITY ((RTEMS_MAXIMUM_PRIORITY / 2) + 1)
 
 #define Put_address_from_area_1( _to_be_printed ) \
    printf( "0x%08lx", \
