@@ -96,7 +96,7 @@ starttask (int arg)
   rtems_status_code sc;
 
   sc = rtems_task_create(rtems_build_name ('S', 'R', 'V', arg + 'A'),
-    100,
+    RTEMS_MAXIMUM_PRIORITY - 1,
     RTEMS_MINIMUM_STACK_SIZE,
     RTEMS_PREEMPT|RTEMS_NO_TIMESLICE|RTEMS_NO_ASR|RTEMS_INTERRUPT_LEVEL(0),
     RTEMS_NO_FLOATING_POINT|RTEMS_LOCAL,
@@ -280,7 +280,7 @@ void test_delete_from_other_task(void)
   directive_failed( sc, "add for other task case" );
 
   sc = rtems_task_create(rtems_build_name ('O', 'T', 'H', 'R'),
-    100,
+    RTEMS_MAXIMUM_PRIORITY - 1,
     RTEMS_MINIMUM_STACK_SIZE,
     RTEMS_PREEMPT|RTEMS_NO_TIMESLICE|RTEMS_NO_ASR|RTEMS_INTERRUPT_LEVEL(0),
     RTEMS_NO_FLOATING_POINT|RTEMS_LOCAL,
@@ -327,7 +327,7 @@ void test_delete_as_side_effect(void)
   test_dtor_ran = 0;
 
   sc = rtems_task_create(rtems_build_name ('O', 'T', 'H', 'R'),
-    100,
+    RTEMS_MAXIMUM_PRIORITY - 1,
     RTEMS_MINIMUM_STACK_SIZE,
     RTEMS_PREEMPT|RTEMS_NO_TIMESLICE|RTEMS_NO_ASR|RTEMS_INTERRUPT_LEVEL(0),
     RTEMS_NO_FLOATING_POINT|RTEMS_LOCAL,
