@@ -1,3 +1,15 @@
+2008-12-14	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* sp07/init.c, sp12/init.c, sp12/pridrv.c, sp12/pritask.c,
+	sp12/system.h, sp16/system.h, sp25/system.h, sp26/task1.c,
+	sp28/init.c, sp29/init.c, sp35/priinv.c, sp42/init.c: Run all tests
+	successfully with maxixum number of priorities as 16 instead of 256.
+	This was done by temporarily modifying the score priority.h maximum.
+	This allowed testing of all API code to ensure that it worked
+	properly with a reduced number of priorities. Most modifications were
+	to switch from hard-coded maximum to using the API provided methods
+	to determine maximum number of priority levels.
+
 2008-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* sp46/sp46.scn: Add screen missed earlier.
